ajout des categorie service et controller
